all icon issues resolved
resolved last little responsiveness issues by changing visibility of timeline cirles to hidden under 480 px.

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -387,7 +387,11 @@ a {
     text-shadow: 2px 2px 2px rgba(167, 167, 167, 0.904) !important;
 
   }
-
+  @media (max-width: 468px) {
+    h3.section-title {
+      letter-spacing: 0em;
+    }
+  }
   
 /*---------------CONTAINER STRUCTURE-------------------*/
 .container {
@@ -522,7 +526,7 @@ a {
   #header h1 {
     margin-top: 75px;
     font-size: 3em;
-    color: #fb34a2;
+    color: #f12495;
     text-shadow: 6px 3px 0 #000000; }
   #header h2 {
     margin-top: -25px;
@@ -644,21 +648,27 @@ a {
 
 @media screen and (max-width: 480px) {
   .timeline li {
-    width: 92%; } 
+    width: 92%; 
+  } 
 
   }
 
-  @media screen and (min-width: 480px) and (max-width: 540){
+  @media screen and (max-width: 540px) {
+    .timeline li i {
+      visibility: hidden;
+    }
+  }
+    /* @media screen and (min-width: 480px) and (max-width: 540){
     .timeline li:nth-child(even) i {
       position: absolute;
-    left: -20%;
+    left: -25%;
      }
 
       .timeline li:nth-child(odd) i {
         position: absolute;
-        left: -20%;
+        left: -25%;
       }
-      }
+      } */
 
   @media screen and (min-width: 540px) and (max-width: 600px){
     .timeline li:nth-child(even) i {
